--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <span id="menu"></span>
     <nav>
         <div class="link">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="lesson03/chamber-site-plan.html">Site Plan</a>
             <a href="chamber/index.html">Chamber</a>
             <a href="https://www.byui.edu/">BYU-Idaho</a>
@@ -57,8 +57,8 @@
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive images</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
-                <li><a href="lesson08/tablebuild.html"></a></li>
-                <li><a href="lesson08/form-start/form-start/index.html"></a></li>
+                <li><a href="lesson08/tablebuild.html">table building</a></li>
+                <li><a href="lesson08/form-start/form-start/index.html">form building</a></li>
             </ul>
         </section>
         <section class="cards">
