--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
     <span id="menu"></span>
     <nav>
         <div class="link">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="lesson03/chamber-site-plan.html">Site Plan</a>
             <a href="chamber/index.html">Chamber</a>
             <a href="https://www.byui.edu/">BYU-Idaho</a>
