--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
                 <li><a href="lesson08/tablebuild.html">table building</a></li>
                 <li><a href="lesson08/form-start/form-start/index.html">form building</a></li>
+                <li><a href="form.html">form homepage</a></li>
             </ul>
         </section>
         <section class="cards">
