--- a/record.html
+++ b/record.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <main>
-       <p>Thank you for submitting your form</p>
+       <p class="thanks">Thank you for submitting your form</p>
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
