--- a/chamber/join.html
+++ b/chamber/join.html
@@ -62,7 +62,7 @@
                     <label>The Organizations Description</label>
                     <textarea name="description" id="description" cols="30" rows="10"></textarea>
                     <input type="hidden" name="date" id="date">
-                    <input class="submit" type="submit" value="Send Info Now!">
+                    <input class="submit" type="submit" value="Join Now!">
                 </div>
             </fieldset>
         </form>
