--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,9 +24,9 @@
         <nav>
             <div class="link">
                 <a href="index.html">Home</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
         </nav>
         <div class="background-box">
