--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
         </nav>
         <div class="background-box">
