--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="this is a chamber of commerce project located in statesville,NC. this Webpage is created by Noah Ruppe">
+        content="this is a Join page designed to let people join the chamber of commerce">
     <meta name="author" content="Noah Ruppe">
     <meta property="og:title" content="Locals Chamber Of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
     <meta property="og:url" content="https://noahruppe.github.io/wdd230/chamber/index.html">
-    <title>Locals Chamber Of Commerce</title>
+    <title>Locals Chamber Of Commerce Join Page</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
