--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
-                <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles lesson activity</a></li>
+                <li><a href="lesson1/media-query.html">Media Query</a></li>
                 <li><a href="lesson02/design-principles.html">design-principles project</a></li>
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a></li>
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
@@ -60,6 +60,8 @@
                 <li><a href="lesson08/tablebuild.html">table building</a></li>
                 <li><a href="lesson08/form-start/form-start/index.html">form building</a></li>
                 <li><a href="form.html">form homepage</a></li>
+                <li><a href="lesson09/new-ward-members.json">JSON</a></li>
+                <li><a href="lesson09/prophets.html">Json Prophets</a></li>
             </ul>
         </section>
         <section class="cards">
