--- a/index.html
+++ b/index.html
@@ -46,23 +46,7 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
-                <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
-                <li><a href="lesson1/media-query.html">Media Query</a></li>
-                <li><a href="lesson02/design-principles.html">design-principles project</a></li>
-                <li><a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a></li>
-                <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
-                <li><a href="https://codepen.io/blazzard-jason/pen/PoaQgXJ">CSS Pseudo-Classes</a></li>
-                <li><a href="lesson05/bom.html">BOM List</a></li>
-                <li><a href="lesson03/images/landscape.webp">WebP</a></li>
-                <li><a href="lesson06/responsive-images.html">Responsive images</a></li>
-                <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
-                <li><a href="lesson08/tablebuild.html">table building</a></li>
-                <li><a href="lesson08/form-start/form-start/index.html">form building</a></li>
-                <li><a href="form.html">form homepage</a></li>
-                <li><a href="lesson09/new-ward-members.json">JSON</a></li>
-                <li><a href="lesson09/prophets.html">Json Prophets</a></li>
-            </ul>
+            <div id="cards"></div>
         </section>
         <section class="cards">
             <h3>Information</h3>
@@ -80,7 +64,7 @@
         Last Modified: <span id = "lastModified"></span>
     </footer>
 
-
+    <script src="scripts/links.js"></script>
     <script src="scripts/getdates.js"></script>
 </body>
 
