--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,6 +46,7 @@
         <p>Noah Ruppe</p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
+    <script src="scripts/companies.js"></script>
     <script src="scripts/responsive.js"></script>
     <script src="scripts/windchill.js"></script>
 </body>
