--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,6 +37,7 @@
         </div>
     </header>
     <main>
+        <h2 class="members1">Our Members</h2>
         <div id="the-file"></div>
     </main>
     <footer>
