--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
     <meta property="og:url" content="https://noahruppe.github.io/wdd230/chamber/index.html">
-    <title>Locals Chamber Of Commerce</title>
+    <title> Directory Of Members-Locals Chamber Of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
