--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,6 +38,10 @@
     </header>
     <main>
         <h2 class="members1">Our Members</h2>
+        <div class="area">
+            <button id="grid">⏹️Grid</button>
+            <button id="list1">📃List</button>
+        </div>
         <div id="the-file"></div>
     </main>
     <footer>
