--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="this is a chamber of commerce project located in statesville,NC. this Webpage is created by Noah Ruppe">
+    <meta name="description" content="this is my directory page showing all the members of the chamber of commerce">
     <meta name="author" content="Noah Ruppe">
     <meta property="og:title" content="Locals Chamber Of Commerce">
     <meta property="og:type" content="website">
