--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
             <div class="link">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
             </div>
         </nav>
