--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,8 +29,8 @@
             <div class="link">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
-                <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="directory.html">Directory</a>
+                <a href="join.html">Join</a>
             </div>
         </nav>
         <div class="background-box">
