--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
         </section>
         <section class="cards">
             <h3>Information</h3>
-            <p>sunshine</p>
-            <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
+            <div class="spacement">
+                <img id="weather-icon" src="" alt="">
+                <p id="current-temp"></p>
+                <figcaption></figcaption>
+                <p class="this"><span class="label">Number of Visits: </span><span class="visits"></span></p>
+            </div>
         </section>
     </main>
     <div class="map">
