--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <section class="cards">
             <h3>Information</h3>
             <div class="spacement">
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon" src="a" alt="a">
                 <p id="current-temp"></p>
-                <figcaption></figcaption>
+                <p class="the-weather"></p>
                 <p class="this"><span class="label">Number of Visits: </span><span class="visits"></span></p>
             </div>
         </section>
