--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,13 +42,22 @@
             <source srcset="images/medium.webp" media="(max-width:1000px)">
             <img src="images/large.webp" alt="hero image">
         </picture>
+        <div id="loose">
+            <span id="close" ></span>
+            <p>Please attend our Chamber Of Commerce meet and greet!</p>
+            <p>Wednesday @ 7:00pm</p>
+        </div>
         <section class="cards">
             <h2>Current Events</h2>
             <p>local food court holding business meeting</p>
         </section>
         <section class="card1">
             <h2>Weather</h2>
-            <div id="weather-info"></div>
+            <p>Today's Weather</p>
+            <p id="current-temp"></p>
+            <img id="weather-icon" src="a" alt="a">
+            <p class="the-weather"></p>
+            <p id="day-of-week"></p>
         </section>
         <section class="signs">
         <h2>Creative Sign Solutions</h2>
@@ -79,6 +88,7 @@
         <p>Noah Ruppe</p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
+    <script src="scripts/banner.js"></script>
     <script src="scripts/responsive.js"></script>
     <script src="scripts/windchill.js"></script>
 </body>
