--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/statesville-pic.webp" alt="Statesville-City-logo">
-        <h1>Locals Chamber of Commerce</h1>
+        <h1>Statesville Chamber of Commerce</h1>
         <span id="menu"></span>
         <nav>
             <div class="link">
@@ -49,7 +49,18 @@
         </div>
         <section class="cards">
             <h2>Current Events</h2>
-            <p>local food court holding business meeting</p>
+            <div class="expo">
+                <h3>Business Expo</h3>
+                <p>Meet all your favorite local business owners, collaborate and grow your business!</p>
+                <p>Business Gathering and lunch @ 12pm, June 20th - 27th </p>
+                <p>Location: Statesville Mall</p>
+            </div>
+            <div class="festivals">
+                <h3>Statesville Apple Festival</h3>
+                <p>Carolinas famous festival right here in statesville, all kinds of food and crafs and music and more and don't forget lots and lots of apples</p>
+                <p>The fun starts at @ 8pm, july 10th - 20th</p>
+                <p>Location: East Broud St Downtown</p>
+            </div>
         </section>
         <section class="card1">
             <h2>Weather</h2>
