--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,7 @@
             <h2>Weather</h2>
             <p>Today's Weather</p>
             <p id="current-temp"></p>
-            <img id="weather-icon" src="a" alt="a">
+            <img id="weather-icon" alt="weather icon of weather">
             <p class="the-weather"></p>
             <p id="day-of-week"></p>
         </section>
