--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,9 +38,9 @@
     </header>
     <main>
         <picture class="lengths">
-            <source srcset="images/small.webp" media="(max-width: 500px)">
-            <source srcset="images/medium.webp" media="(max-width:1000px)">
-            <img src="images/large.webp" alt="hero image">
+            <source srcset="images/mine.webp" media="(max-width: 500px)">
+            <source srcset="images/medium-pic.webp" media="(max-width:1000px)">
+            <img src="images/MicrosoftTeams-image.webp" alt="hero image">
         </picture>
         <div id="loose">
             <span id="close" ></span>
@@ -70,26 +70,21 @@
             <p class="the-weather"></p>
             <p id="day-of-week"></p>
         </section>
+        <p class="spot">Spotlights</p>
         <section class="signs">
-        <h2>Creative Sign Solutions</h2>
-            <div>
-                <p>If you need a sign we're your guys</p>
-                <p>Call 704-880-9292</p>
-            </div>
+            <h2 id="title1"></h2>
+            <img id="logo1" alt="logo image">
+            <p id="statement1"></p>
         </section>
         <section class="roofing">
-            <h2>Randys Roofing CO.</h2>
-            <div>
-                <p>We do the job right!</p>
-                <p>Call 704-775-5566</p>
-            </div>
+            <h2 id="title2"></h2>
+            <img id="logo2" alt="logo image">
+            <p id="statement2"></p>
         </section>
         <section class="land">
-            <h2>Smiths Landscaping</h2>
-            <div>
-                <p>We pride ourselfs on a job well done</p>
-                <p>Call 980-458-6472</p>
-            </div>
+            <h2 id = title3></h2>
+            <img id="logo3" alt="logo image">
+            <p id="statement3"></p>
         </section>
     </main>
     <footer>
@@ -99,8 +94,10 @@
         <p>Noah Ruppe</p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
+    <script src="scripts/spotlights.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/responsive.js"></script>
     <script src="scripts/windchill.js"></script>
 </body>
 </html>
+
