--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <picture class="lengths">
-            <source src="images/small-pic.webp" media="(max-width: 500px)">
+            <source srcset="images/small-pic.webp" media="(max-width: 500px)">
             <source srcset="images/medium-pic.webp" media="(max-width:1000px)">
             <img src="images/MicrosoftTeams-image.webp" alt="hero image">
         </picture>
