--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,24 +66,24 @@
             <h2>Weather</h2>
             <p>Today's Weather</p>
             <p id="current-temp"></p>
-            <img id="weather-icon" src="" alt="weather icon of weather">
+            <img id="weather-icon" src="https://openweathermap.org/img/w/" alt="weather icon of weather">
             <p class="the-weather"></p>
             <p id="day-of-week"></p>
         </section>
         <p class="spot">Spotlights</p>
         <section class="signs">
-            <h2 id="title1"></h2>
-            <img id="logo1" alt="logo image">
+            <h2 id="title1">h</h2>
+            <img id="logo1" src="https//" alt="logo image">
             <p id="statement1"></p>
         </section>
         <section class="roofing">
-            <h2 id="title2"></h2>
-            <img id="logo2" alt="logo image">
+            <h2 id="title2">h</h2>
+            <img id="logo2" src="https//" alt="logo image">
             <p id="statement2"></p>
         </section>
         <section class="land">
-            <h2 id = title3></h2>
-            <img id="logo3" alt="logo image">
+            <h2 id = title3>h</h2>
+            <img id="logo3" src="https//" alt="logo image">
             <p id="statement3"></p>
         </section>
     </main>
