--- a/scoots/index.html
+++ b/scoots/index.html
@@ -88,6 +88,7 @@
             Last Modified: <span id = "lastModified"></span>
         </footer>
     </main>
+    <script src="scripts/hamburger.js"></script>
     <script src="scripts/max-temp.js"></script>
     <script src="scripts/footer.js"></script>
     <script src="scripts/weather.js"></script>
