--- a/scoots/index.html
+++ b/scoots/index.html
@@ -26,13 +26,13 @@
     <nav>
         <div>
             <img src="images/facebook.webp" alt="facebook logo">
-            <a class="facebook" href="https://www.facebook.com/">Facbook</a>
+            <a class="facebook" href="https://www.facebook.com/">Facebook</a>
             <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
             <a class="facebook" href="">Instagram</a>
         </div>
         <section class="links">
-            <a href="#">Home</a>
-            <a href="#">Rentals</a>
+            <a href="index.html">Home</a>
+            <a href="rentals.html">Rentals</a>
             <a href="#">Reservations</a>
             <a href="#">Contact</a>
         </section>
