--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -22,13 +22,13 @@
     <nav>
         <div>
             <img src="images/facebook.webp" alt="facebook logo">
-            <a class="facebook" href="https://www.facebook.com/">Facbook</a>
+            <a class="facebook" href="https://www.facebook.com/">Facebook</a>
             <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
             <a class="facebook" href="">Instagram</a>
         </div>
         <section class="links">
-            <a href="#">Home</a>
-            <a href="#">Rentals</a>
+            <a href="index.html">Home</a>
+            <a href="rentals.html">Rentals</a>
             <a href="#">Reservations</a>
             <a href="#">Contact</a>
         </section>
@@ -55,75 +55,20 @@
         <table
         style="border-collapse: collapse; border: 1px solid #000000; margin-left: auto; margin-right: auto;"
         border="1" cellpadding="5">
+        </table>
 
-        <tr>
-          <td style="background-color: navy; text-align: center;" colspan="6"><span
-              style="color: #ffffff; font-size: 14pt;"><strong>Max Rental Pricing</strong></span>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2"></td>
-          <td style="text-align: center;" colspan="2"><strong>Reservation</strong></td>
-          <td style="text-align: center;" colspan="2"><strong>Walk-In</strong></td>
-        </tr>
-        <tr>
-          <td style="text-align: center;"><strong>Rental Type</strong></td>
-          <td style="text-align: center;"><strong>Max. Persons</strong></td>
-          <td style="text-align: center;"><strong>Half Day<br />(3 hrs)</strong></td>
-          <td style="text-align: center;"><strong>Full Day</strong></td>
-          <td style="text-align: center;"><strong>Half Day<br />(3 hrs)</strong></td>
-          <td style="text-align: center;"><strong>Full Day</strong></td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">~Honda Metro Scooter</td>
-          <td style="text-align: center;">1</td>
-          <td style="text-align: center;">$20</td>
-          <td style="text-align: center;">$30</td>
-          <td style="text-align: center;">$25</td>
-          <td style="text-align: center;">$35</td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">~Honda Dio Scooter</td>
-          <td style="text-align: center;">2</td>
-          <td style="text-align: center;">$30</td>
-          <td style="text-align: center;">$40</td>
-          <td style="text-align: center;">$35</td>
-          <td style="text-align: center;">$45</td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">~Honda PCX150 Scooter</td>
-          <td style="text-align: center;">2</td>
-          <td style="text-align: center;">$40</td>
-          <td style="text-align: center;">$50</td>
-          <td style="text-align: center;">$45</td>
-          <td style="text-align: center;">$55</td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">Honda Pioneer ATV</td>
-          <td style="text-align: center;">4</td>
-          <td style="text-align: center;">$50</td>
-          <td style="text-align: center;">$70</td>
-          <td style="text-align: center;">$60</td>
-          <td style="text-align: center;">$80</td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">Jeep Wrangler - 4 door with a/c</td>
-          <td style="text-align: center;">5</td>
-          <td style="text-align: center;">$70</td>
-          <td style="text-align: center;">$100</td>
-          <td style="text-align: center;">$85</td>
-          <td style="text-align: center;">$125</td>
-        </tr>
-        <tr>
-          <td style="text-align: center;">Jeep Wrangler - 2 door</td>
-          <td style="text-align: center;">4</td>
-          <td style="text-align: center;">$60</td>
-          <td style="text-align: center;">$85</td>
-          <td style="text-align: center;">$70</td>
-          <td style="text-align: center;">$90</td>
-        </tr>
-        </tbody>
-      </table>
+        <h3 class="p1">Honda Metro Scooter</h3>
+        <img class="scoot1" src="images/scooter1.webp" alt="scooter pic">
+        <h3 class="p2">Honda Dio Scooter</h3>
+        <img class="scoot2" src="images/scoot2 (2).webp" alt="scooter number 2">
+        <h3 class="p3">Honda PCX150 Scooter</h3>
+        <img class="scoot3" src="images/scoot-3.webp" alt="scooter pic 3">
+        <h3 class="p4">Honda Pioneer ATV</h3>
+        <img class="scoot4" src="images/scoot4.webp" alt="atv picture">
+        <h3 class="p5">Jeep Wrangler - 4 door with a/c</h3>
+        <img class="scoot5" src="images/scoot5.webp" alt="jeep picture">
+        <h3 class="p6">Jeep Wrangler - 2 door</h3>
+        <img class="scoot6" src="images/scoot6.webp" alt="2 door jeep picture">
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
