--- a/scoots/index.html
+++ b/scoots/index.html
@@ -25,16 +25,20 @@
     </header>
     <nav>
         <div>
-            <img src="images/facebook.webp" alt="facebook logo">
-            <a class="facebook" href="https://www.facebook.com/">Facebook</a>
-            <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
-            <a class="facebook" href="">Instagram</a>
+            <section>
+                <img src="images/facebook.webp" alt="facebook logo">
+                <a class="facebook" href="https://www.facebook.com/">Facebook</a>
+            </section>
+            <section>
+                <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
+                <a class="facebook" href="">Instagram</a>
+            </section>
         </div>
         <section class="links">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
-            <a href="#">Reservations</a>
-            <a href="#">Contact</a>
+            <a href="reservations.html">Reservations</a>
+            <a href="contact.html">Contact</a>
         </section>
     </nav>
     <main>
@@ -76,10 +80,11 @@
 
         <section class="location">
             <h3>Contact us!</h3>
-            <p>704-993-6532  Or by social media</p>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1711827026351!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            <p>704-993-6532</p>
+            <p class="j">Join Us at our two locations</p>
+            <p class="l">Located At: el Centro de Cozumel - And Puerta Maya</p>
+            <img class="island-scooters" src="images/rsz_scoots1.webp" alt="scoots at the cruise line">
+            <img class="wheel-scooters" src="images/rsz_scoots2.webp" alt="scoots island scooters">
         </section>
     </main>
     <footer>
@@ -93,4 +98,3 @@
     <script src="scripts/weather.js"></script>
 </body>
 </html>
-
