--- a/scoots/thankyou.html
+++ b/scoots/thankyou.html
@@ -34,41 +34,11 @@
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
-            <a href="contact.html">Contact</a>
+            <a href="#">Contact</a>
         </section>
     </nav>
     <main>
-        <h2 class="services">Our Rental Options</h2>
-        <div class="agreements-box">
-            <div class="services-w-descriptions">
-                <ul>
-                    <li><p>Honda Metro Scooter</p></li>
-                    <li><p>Honda Dio Scooter</p></li>
-                    <li><p>Honda PCX150 Scooter</p></li>
-                    <li><p>Honda Pioneer ATV</p></li>
-                    <li><p>Jeep Wrangler - 4 door with a/c	</p></li>
-                    <li><p>Jeep Wrangler - 2 door</p></li>
-                  </ul>
-            </div>
-        </div>
-
-        <table
-        style="border-collapse: collapse; border: 1px solid #000000; margin-left: auto; margin-right: auto;"
-        border="1" cellpadding="5">
-        </table>
-
-        <h3 class="p1">Honda Metro Scooter</h3>
-        <img class="scoot1" src="images/scooter1.webp" alt="scooter pic">
-        <h3 class="p2">Honda Dio Scooter</h3>
-        <img class="scoot2" src="images/scoot2 (2).webp" alt="scooter number 2">
-        <h3 class="p3">Honda PCX150 Scooter</h3>
-        <img class="scoot3" src="images/scoot-3.webp" alt="scooter pic 3">
-        <h3 class="p4">Honda Pioneer ATV</h3>
-        <img class="scoot4" src="images/scoot4.webp" alt="atv picture">
-        <h3 class="p5">Jeep Wrangler - 4 door with a/c</h3>
-        <img class="scoot5" src="images/scoot5.webp" alt="jeep picture">
-        <h3 class="p6">Jeep Wrangler - 2 door</h3>
-        <img class="scoot6" src="images/scoot6.webp" alt="2 door jeep picture">
+        <p class="joining">Thank your for Joining</p>
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
@@ -80,4 +50,3 @@
     <script src="scripts/footer.js"></script>
 </body>
 </html>
-
