--- a/scoots/index.html
+++ b/scoots/index.html
@@ -25,24 +25,24 @@
     </header>
     <nav>
         <div>
-            <section>
+            <div>
                 <img src="images/facebook.webp" alt="facebook logo">
                 <a class="facebook" href="https://www.facebook.com/">Facebook</a>
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
                 <a class="facebook" href="">Instagram</a>
-            </section>
+            </div>
         </div>
-        <section class="links">
+        <div class="links">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
-        </section>
+        </div>
     </nav>
     <main>
-        <img class="main-img" src="images/cozumel5.webp" alt="main picture of cozemel island" loading="">
+        <img class="main-img" src="images/cozumel5.webp" alt="main picture of cozemel island" loading="lazy">
         <div class="ress">
             <h2>Types Of Rentals</h2>
             <p>Experience adventure on our scooters, perfect for solo explorers or adventurous pairs!</p>
