--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -21,21 +21,21 @@
     </header>
     <nav>
         <div>
-            <section>
+            <div>
                 <img src="images/facebook.webp" alt="facebook logo">
                 <a class="facebook" href="https://www.facebook.com/">Facebook</a>
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
                 <a class="facebook" href="">Instagram</a>
-            </section>
+            </div>
         </div>
-        <section class="links">
+        <div class="links">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
-        </section>
+        </div>
     </nav>
     <main>
         <h2 class="services">Our Rental Options</h2>
@@ -52,15 +52,13 @@
             </div>
         </div>
 
-        <table
-        style="border-collapse: collapse; border: 1px solid #000000; margin-left: auto; margin-right: auto;"
-        border="1" cellpadding="5">
+        <table border="1" cellpadding="5">
         </table>
 
         <h3 class="p1">Honda Metro Scooter</h3>
         <img class="scoot1" src="images/scooter1.webp" alt="scooter pic">
         <h3 class="p2">Honda Dio Scooter</h3>
-        <img class="scoot2" src="images/scoot2 (2).webp" alt="scooter number 2">
+        <img class="scoot2" src="images/scoot2(2).webp" alt="scooter number 2">
         <h3 class="p3">Honda PCX150 Scooter</h3>
         <img class="scoot3" src="images/scoot-3.webp" alt="scooter pic 3">
         <h3 class="p4">Honda Pioneer ATV</h3>
