--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -65,7 +65,7 @@
                     <label class="rdate">Returning Date* <Input type="date" id="rdate" name="rdate" required></Input></label>
                     <label>Rental Options* </label>
                     <select name="dropdown" id="dropdown" required>
-                        <option value="the options for the drop down menu">Select A Option</option>
+                        <option value="">Select A Option</option>
                         <option value="Honda Metro Scooter">Honda Metro Scooter</option>
                         <option value="Honda Dio Scooter">Honda Dio Scooter</option>
                         <option value="Honda PCX150 Scooter">Honda PCX150 Scooter</option>
