--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -21,21 +21,21 @@
     </header>
     <nav>
         <div>
-            <section>
+            <div>
                 <img src="images/facebook.webp" alt="facebook logo">
                 <a class="facebook" href="https://www.facebook.com/">Facebook</a>
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
                 <a class="facebook" href="">Instagram</a>
-            </section>
+            </div>
         </div>
-        <section class="links">
+        <div class="links">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
-        </section>
+        </div>
     </nav>
     <main>
         <h2 class="our-rentals">Rental Services & Agreements</h2>
@@ -61,8 +61,8 @@
             <fieldset>
                 <h2>Reservations</h2>
                 <div class="padding">
-                    <label class="date">Receiving Date* <Input type="date" id="date" name="date" required></Input></label>
-                    <label class="rdate">Returning Date* <Input type="date" id="rdate" name="rdate" required></Input></label>
+                    <label class="date">Receiving Date* <Input type="date" id="date1" name="date" required></label>
+                    <label class="rdate">Returning Date* <Input type="date" id="rdate" name="rdate" required></label>
                     <label>Rental Options* </label>
                     <select name="dropdown" id="dropdown" required>
                         <option value="">Select A Option</option>
