--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -56,18 +56,18 @@
 
         <div class="rectangel-1">
             <h2>Contact us</h2>
-            <img id='fac'class="f1" src="images/facebook.webp" alt="facebook logo">
-            <a id='fac'class="facebook1" href="https://www.facebook.com/">Facebook</a>
-            <img id="fac" class="f1" src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
-            <a id="fac" class="facebook1" href="">Instagram</a>
-            <p id="fac">704-993-6532  Or by social media</p>
+            <img id='fac' class="f1" src="images/facebook.webp" alt="facebook logo">
+            <a id='fac1' class="facebook1" href="https://www.facebook.com/">Facebook</a>
+            <img id="fac2" class="f1" src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
+            <a id="fac3" class="facebook1" href="">Instagram</a>
+            <p id="fac4">704-993-6532  Or by social media</p>
         </div>
 
-        <section class="location-1">
+        <div class="location-1">
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1711827026351!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
