--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -52,7 +52,8 @@
             </div>
         </div>
 
-        <table border="1" cellpadding="5">
+        <table>
+            
         </table>
 
         <h3 class="p1">Honda Metro Scooter</h3>
