--- a/scoots/thankyou.html
+++ b/scoots/thankyou.html
@@ -21,21 +21,21 @@
     </header>
     <nav>
         <div>
-            <section>
+            <div>
                 <img src="images/facebook.webp" alt="facebook logo">
                 <a class="facebook" href="https://www.facebook.com/">Facebook</a>
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="images/InstagramGrey.6ca8518f.webp" alt="instagram logo">
                 <a class="facebook" href="">Instagram</a>
-            </section>
+            </div>
         </div>
-        <section class="links">
+        <div class="links">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="#">Contact</a>
-        </section>
+        </div>
     </nav>
     <main>
         <p class="joining">Thank your for Joining</p>
