--- a/scoots/index.html
+++ b/scoots/index.html
@@ -73,7 +73,7 @@
         <section class="reservation">
             <h2>Start Your Adventure By Reserving Now!</h2>
             <div>
-                <button type="button" onclick="">Reserve Now!</button>
+                <button type="button" onclick="redirectToReservations()">Reserve Now!</button>
             </div>
             <p>Embark on an unforgettable journey filled with adventure and relaxation amidst the stunning landscapes of Cozumel, Mexico. From thrilling escapades to serene retreats, the wonders of this destination await your discovery. Let us be your trusted companion on this extraordinary vacation, ensuring every moment is nothing short of extraordinary.</p>
         </section>
