--- a/scoots/index.html
+++ b/scoots/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Noah Ruppe">
     <meta property="og:title" content="Scoots">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
+    <meta property="og:image" content="https://media.nomadicmatt.com/2023/tropicalislandsfeature.jpg">
     <meta property="og:url" content="https://noahruppe.github.io/wdd230/scoots/index.html">
     <title>Scoots</title>
     <link rel="stylesheet" href="styles/normalize.css">
